--- a/src/components/LightSquare/LightSquare.css
+++ b/src/components/LightSquare/LightSquare.css
@@ -6,5 +6,11 @@
 }
 
 .lit {
-    background-color: aqua;
+    background-color: #fff; /* White background */
+  box-shadow:
+    0 0 21px #fff,  /* White glow */
+    0 0 42px #0099ff,  /* Additional blue layer with shorter radius */
+    0 0 102px #0099ff,  /* Electric blue tint */
+    0 0 151px #0099ff; 
+    
 }
