--- a/src/components/Modal/Modal.css
+++ b/src/components/Modal/Modal.css
@@ -12,12 +12,26 @@
   
   .modal-content {
     background: white;
-    padding: 20px;
     border-radius: 8px;
     width: 400px;
     max-height: 80%;
     overflow-y: auto;
     color:black;
     text-align: center;
+    font-size: 1.5em;
+    box-sizing: border-box;
+    overflow: hidden;
+  }
+
+  .modal-controls{
+    width:100%;
+    text-align: right;
+    padding:2px;
+
+  }
+
+  .modal-close-button{
+    margin-right:10px;
+    font-weight: bold;
   }
   
