--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -1,59 +1,70 @@
 @font-face {
-    font-family: 'neon';
-    src: url('../../../public/assets/fonts/neon.ttf') format('truetype');
-    font-weight: normal;
-    font-style: normal;
-  }
+  font-family: 'neon';
+  src: url('../../../public/assets/fonts/neon.ttf') format('truetype');
+  font-weight: normal;
+  font-style: normal;
+}
 
 .header-main {
-    text-align: center;
-    font-family: 'neon',sans-serif;
-    font-size:48px;
+  text-align: center;
+  font-family: 'neon', sans-serif;
+  font-size: 48px;
 }
 
 .neon-red {
-    color: #fff; /* White text */
-    text-shadow:
-        /* White glow */
-        0 0 21px #fff,
-        /* Red glow */
-        0 0 42px #f00,
-        0 0 82px #f00,
-        0 0 92px #f00,
-        0 0 102px #f00,
-        0 0 151px #f00;
+  color: #fff;
+  /* White text */
+  text-shadow:
+    /* White glow */
+    0 0 21px #fff,
+    /* Red glow */
+    0 0 42px #f00,
+    0 0 82px #f00,
+    0 0 92px #f00,
+    0 0 102px #f00,
+    0 0 151px #f00;
 }
 
 .neon-blue {
-    color: #fff; /* White text */
-    text-shadow:
-        /* White glow */
-        0 0 21px #fff,
-        /* Electric blue glow */
-        0 0 42px #00f,
-        0 0 82px #00f,
-        0 0 92px #00f,
-        0 0 102px #00f,
-        0 0 151px #00f;
+  color: #fff;
+  /* White text */
+  text-shadow:
+    /* White glow */
+    0 0 21px #fff,
+    /* Electric blue glow */
+    0 0 42px #00f,
+    0 0 82px #00f,
+    0 0 92px #00f,
+    0 0 102px #00f,
+    0 0 151px #00f;
 }
 
 @keyframes flicker {
-    0%, 18%, 22%, 25%, 53%, 57%, 100% {
-      text-shadow:
-        0 0 4px #fff,
-        0 0 11px #fff,
-        0 0 19px #fff,
-        0 0 40px #00f
-        0 0 80px #00f
-        0 0 90px #00f
-        0 0 100px #00f,
-        0 0 150px #00f;
-    }
-    20%, 24%, 55% {       
-      text-shadow: none;
-    }
+
+  0%,
+  18%,
+  22%,
+  25%,
+  53%,
+  57%,
+  100% {
+    text-shadow:
+      0 0 4px #fff,
+      0 0 11px #fff,
+      0 0 19px #fff,
+      0 0 40px #00f 0 0 80px #00f 0 0 90px #00f 0 0 100px #00f,
+      0 0 150px #00f;
   }
 
+  20%,
+  24%,
+  55% {
+    text-shadow: none;
+    color: darkgray;
+    opacity: .4;
+  }
+}
+
 .flicker {
-    animation: flicker 1.5s infinite alternate;
+  animation: flicker 1.5s infinite alternate;
 }
