--- a/src/components/StartButton/StartButton.css
+++ b/src/components/StartButton/StartButton.css
@@ -1,7 +1,7 @@
 .start-button {
     background-color: black;
     border: 1px solid aqua;
-    color: aqua;
+    color: white;
     font-size: 1.5em;
     padding: .5em;
 }
