--- a/src/components/Modal/Modal.css
+++ b/src/components/Modal/Modal.css
@@ -1,37 +1,46 @@
 .modal-overlay {
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    background: rgba(0, 0, 0, 0.7);
-    display: flex;
-    justify-content: center;
-    align-items: center;
-  }
-  
-  .modal-content {
-    background: white;
-    border-radius: 8px;
-    width: 400px;
-    max-height: 80%;
-    overflow-y: auto;
-    color:black;
-    text-align: center;
-    font-size: 1.5em;
-    box-sizing: border-box;
-    overflow: hidden;
-  }
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: rgba(0, 0, 0, 0.7);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
 
-  .modal-controls{
-    width:100%;
-    text-align: right;
-    padding:2px;
+.modal-content {
+  background: black;
+  border-radius: 8px;
+  width: 400px;
+  max-height: 80%;
+  overflow-y: auto;
+  color: white;
+  text-align: center;
+  font-size: 1.75em;
+  box-sizing: border-box;
+  overflow: hidden;
+  border: 1px solid white;
+  box-shadow:
+    0 0 21px #0099ff,
+    0 0 42px #0099ff,
+    0 0 82px #0099ff,
+    0 0 102px #0099ff,
+    0 0 151px #0099ff;
 
-  }
+}
 
-  .modal-close-button{
-    margin-right:10px;
-    font-weight: bold;
-  }
-  
+.modal-controls {
+  width: 100%;
+  text-align: right;
+  padding: 2px;
+
+}
+
+.modal-close-button {
+  background-color: black;
+  color: white;
+  margin-right: 10px;
+  font-weight: bold;
+}
