--- a/src/components/Modal/Modal.css
+++ b/src/components/Modal/Modal.css
@@ -18,7 +18,6 @@
   overflow-y: auto;
   color: white;
   text-align: center;
-  font-size: 1.75em;
   box-sizing: border-box;
   overflow: hidden;
   border: 1px solid white;
@@ -41,6 +40,14 @@
 .modal-close-button {
   background-color: black;
   color: white;
-  margin-right: 10px;
+  margin-right: 15px;
+  margin-top: 5px;
   font-weight: bold;
+  font-size: 20px;
+}
+
+.modal-message-text {
+  position: relative;
+  top: -15px;
+  font-size: 32px;
 }
