--- a/src/components/GameConrols/GameControls.css
+++ b/src/components/GameConrols/GameControls.css
@@ -1,13 +1,16 @@
-.start-button {
+.start-button, .puzzle-button {
     background-color: black;
     border: 1px solid aqua;
     color: white;
     font-size: 1.5em;
     padding: .5em;
     cursor: pointer;
+    
 }
 
 .button-container {
     margin: 20px auto;
-    text-align: center;
+    display:flex;
+    width:600px;
+    justify-content: space-between;
 }
