--- a/src/components/Modal/Modal.css
+++ b/src/components/Modal/Modal.css
@@ -21,6 +21,7 @@
   box-sizing: border-box;
   overflow: hidden;
   border: 1px solid white;
+  padding-bottom:10px;
   box-shadow:
     0 0 21px #0099ff,
     0 0 42px #0099ff,
@@ -67,4 +68,17 @@
   cursor: pointer;
   font-size: 24px;
   
+}
+
+.modal-selected{
+  font-weight: bold;
+}
+
+.modal-button{
+  background-color: black;
+  border: 1px solid #0099ff;
+  color: white;
+  font-size: 1.5em;
+  padding: .5em;
+  cursor: pointer;
 }
